# gallery

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.celery  Makefile  QUICK_START.md  README.md  README_TESTING.md  config.example.yaml  docker-compose.gpu.yml  docker-compose.vps.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-celery.txt  requirements-gpu-paddle.txt  requirements-gpu-pypi.txt  requirements-gpu-pytorch.txt
.cursor/: mcp.json
.cursor/rules/: shared.md
.github/workflows/: README.md  lint.yml.disabled  tests.yml  tests.yml.disabled
app/config/: celery.py  config_loader.py  example_gpu.py  logging_config.py  settings.py  test_settings.py  urls.py
app/gallery/: README.md  README_FRONTEND.md  admin.py  forms.py  models.py  serializers.py  tasks.py  template_views.py  urls.py  utils.py  views.py
app/gallery/migrations/: 0001_initial.py  0002_picturetag.py  0003_populate_picturetag.py  0004_picture_use_picturetag_through.py  0005_rename_gallery_pictag_pic_src_idx_gallery_pic_picture_58a83a_idx.py  __init__.py
app/gallery/templates/gallery/: album_detail.html  album_form.html  base.html  gallery_detail.html  gallery_form.html  gallery_list.html  picture_detail.html  picture_edit.html  picture_upload.html
app/gallery/templates/gallery/partials/: empty.html  favorite_button.html  (+1 more)
app/gallery/templatetags/: __init__.py  gallery_tags.py
app/templates/account/: base.html  login.html  logout.html  password_reset.html  password_reset_done.html  signup.html
app/tests/: __init__.py  conftest.py
app/tests/e2e/: README.md  __init__.py  conftest.py  test_login_and_create_gallery.py
app/tests/gallery/: __init__.py  test_models.py  test_utils.py  test_views.py
docs/: DEPLOYMENT.md  FRONTEND.md  NGINX_SIGNED_URLS.md  SEAWEEDFS_AUTH.md  SECURITY_EXPLANATION.md  SSL_NGINX.md  WIREGUARD_SETUP.md  prd.md
nginx/: nginx.conf
nginx/conf.d/: ssl.conf.example
scripts/: download_yolo_models.py  setup_seaweedfs_auth.py
