[project]
name = "gallery"
version = "0.1.0"
description = "SmartGallery - Intelligent Photo Gallery with AI Tagging"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "Django>=5.0.0",
    "psycopg2-binary>=2.9.9",
    "django-storages>=1.14.2",
    "boto3>=1.34.0",
    "Pillow>=10.2.0",
    "python-dotenv>=1.0.0",
    "gunicorn>=21.2.0",
    "django-allauth>=0.57.0",
    "djangorestframework>=3.14.0",
    "celery>=5.3.0",
    "flower>=2.0.0",
    "redis>=5.0.0",
    "pyyaml>=6.0.0",
]
